# fp-homework

./: README.md
hw1/: hw1.cabal
hw1/src/: Lib.hs
hw2/: hw2.cabal  test.sh
hw2/src/Block1/: Expr.hs  PartialFunctions.hs
hw2/src/Block2/: Bin.hs  Combinations.hs  Permutations.hs
hw2/src/Block3/: ChaoticGood.hs  Fishes.hs  Fishes2.hs
hw2/src/Block4/: Basic.hs  Hard.hs  Let.hs
hw2/test/Block1/: ExprSpec.hs  PartialFunctionsSpec.hs
hw2/test/Block2/: BinSpec.hs  CombinationsSpec.hs  PermutationsSpec.hs
hw2/test/Block4/: BasicSpec.hs  HardSpec.hs  LetSpec.hs
hw3/: hw3.cabal  input.txt  stack.yaml
hw3/app/: Main.hs
hw3/src/: Part1.hs  Part10.hs  Part2.hs  Part3.hs  Part4.hs  Part5.hs
hw3/test/: Part1Spec.hs
