name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Expr, Block1.PartialFunctions
                       Block2.Bin, Block2.Combinations, Block2.Permutations
                       Block3.Fishes, Block3.Fishes2, Block3.ChaoticGood,
                       Block4.Basic, Block4.Hard, Block4.Let
  ghc-options:         -Wall
  build-depends:       base >= 4.9, containers
  default-language:    Haskell2010

test-suite spec
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test, src
  other-modules:
  default-language:   Haskell2010
  ghc-options:        -Wall -threaded
  build-depends:      base >= 4.9, hspec

--  cabal configure --enable-tests